# scheduler-kata

./: .env  .env.local  .env.sqlx  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  docker-compose.yml  openapi.json  openapi.yaml
.sqlx/: query-04ac8b67f6ba1c106e0780a5752196915134a0fa50fadf4da26c2cf5de57b743.json  query-11599be1dadbd79e03b5910663a64211c9a5900d3b3360e207cedab76cb073e5.json  query-22b2c6f9b8f1629aaff244d26fcc177c9766362eb9951d37a8e6fe010c1ba0b5.json  query-3e602fded2f30da594df19801827cbdf7bfbc6374145fd4b2b7a0dafb29dbd04.json  query-472a19ec5ea2cc90c48bbb3b68bec3363cc5d1190dbcb02a60a767c0b2d72b2a.json  query-49f9dfe259fc254951be673cd0d25cfea863e4f3419818cac24e13bce24f0e31.json  query-4a3d63325c77b76ffe7f1b8b2b57c32bbfc687b6676eaa56b9cb647be5934328.json  query-58a3df7a6f6c948636f43fbe592512e9e8464b25c835c3ab11334aead93e8e18.json  query-6341f5ad539edbad5ff961320ee2fab692cda7e94fb15abbd66190cb32cb5e06.json  query-6aab726ebe1ecd180201886e03609695dbbce8d7468f6066ff139af552e06563.json  query-7502d1407c39ef97c1db8ae30079c83fb397cf101e3e2018e22b836671503343.json  query-7d24e58fce3b866bbe267db93452e48125abcd8db12587adba7dcbc834eb1d46.json  query-a309109cef0e8f4a73354469490866b9a1ac0835223116a5da89923c60d4d738.json  query-a4cfc9d1d1d2710b542a2b375633bc7a4e87cef96c3e041c6d35c0306e52ec17.json  query-ab6c3777543c98e82c4db444886f7e761dd723a4d7b068674db9ccc0ccace079.json  query-acba2e6d3466ea65a1f3529b2a636521ab79b532e190ec0d5f62af5464356567.json  query-bbb62409ee587738c202e4a2584a36ce8651c8608f1f9b7fb47320045cee7712.json  query-c59380fe21049de32f433f0142fe4e5df9bb3c5059f7feb8c647133ad15e8eca.json  query-ce1aa5682568857cc642f33ae50f9c6decdc38436917f8e2437ac872c02e8406.json  query-da074ef89f4bf5696c9eba7167534fe357422989766e8017735fbf0c9b38d1b2.json  query-da74084837a4e4bef316f8546dff40106b7355160ec3fb1c5229d8c03a1737a1.json  query-dfe5849a5cd92387c976a5671061da800a6b180495cdf72e60db01f271621de8.json  query-ec3fcaaa7b9232cce2202f6a6ce291c301912c568007c3762083a95c5986e457.json  query-f007779cc09627b07db46de7d5d0196fb8c1b42ad17794dd4effef2bc4212fcc.json  query-f4b7d12ea63e050888edeeb7c5a7c8ff76d75c59f1c7e4e2c24bcef828fd7f81.json  query-fb3640a64b4d16b333c34893a55b94d45a8101d7db2ea9c933b8d215f2bf5a51.json
benchmark/: .gitignore  00-load_data.sql  0000_log.md  0001_log.md  01-create_task.sql  02-dequeue.sql  04-dequeue_and_complete.sql  README.md  bench.sh  log.md  log_00v1.md  log_00v2.md  log_01v1.md  log_01v2.md  measure-01-time-consuming.sql  measure-02-most-writes-buffers.sql  measure-03-table-bloat.sql  measure-04-table-stats.sql  raw_stats_cpu.csv  raw_stats_db.csv  stats_cpu.csv
benchmark/0000_env/: bench.sh  docker-compose.yml  monitor.sh
benchmark/0001_env/: .env  bench.sh
benchmark/00_all-at-once/: bench.sh  docker-compose.yml  stats_db.csv  v2_stats_cpu.csv  v2_stats_db.csv
benchmark/01_scheduler-and-workers/: .env  bench.sh  docker-compose.yml  raw_stats_cpu.csv  raw_stats_db.csv  v1_stats_cpu.csv  v1_stats_db.csv  v2_stats_cpu.csv  v2_stats_db.csv
crates/app-monolith/: Cargo.toml
crates/app-monolith/src/: main.rs
crates/app-rest-api/: Cargo.toml
crates/app-rest-api/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: db.rs  error.rs
crates/docs/: Cargo.toml
crates/docs/src/: error.rs  extractor.rs  lib.rs  openapi.rs  redoc.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: health_check.rs  router.rs  server.rs  tracing.rs
crates/monolith-app/: Cargo.toml
crates/monolith-app/src/: docs.rs  main.rs
crates/queue/: Cargo.toml
crates/queue/sql/: dequeue.sql  enqueue.sql  finish_task.sql  process_failure.init.sql  process_failure.retry.sql
crates/queue/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  main.rs  service.rs  task.rs  worker.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/task-api/: Cargo.toml
crates/task-api/sql/: create_task.sql  delete_task.sql  show_task.sql
crates/task-api/src/: lib.rs  router.rs  task_v1.rs
crates/task-api/src/task_v1/: db_service.rs  model.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
crates/workers/: Cargo.toml
crates/workers/src/: lib.rs  main.rs
docker/: app-monolith.Dockerfile  app-rest-api.Dockerfile  db.Dockerfile  scheduler.Dockerfile  worker.Dockerfile
migrations/: 20230624173017_task_table.sql  20230624190630_task_state_view.sql  20230723112635_switch_unique_to_pkey.sql  20230723141241_task_bucket.sql  20240601202830_utils.sql  20240602092736_acls.sql  20240602093009_data.sql  20240602093052_postgrest.sql  20240602110831_worker.sql  20240602190916_delete_task.sql  20240603224655_unused_index.sql  20240605185924_worker_role.sql  20240606163625_notify_after_insert.sql  20240606193334_disable_notify_after_insert.sql  20240607161221_cancel_running_task.sql
migrations_internal/: 20230624170837_bootstrap.sql  20230723094419_remove_unused_job.sql
scripts/: .eslintrc.js  .gitignore  Makefile  README.md  index.mjs  index.spec.mjs  package.json
tests/: 0000_list_tasks.hurl  0001_create_task.hurl  0002_dequeue_and_complete.hurl  0003_delete_task.hurl  000_health.hurl  001_create-task-returning-id.hurl  002_create-task-specific-exec-time.hurl  003_task-flow.hurl  004_list-tasks.hurl  005_paginate-tasks.hurl  006_filter-tasks.hurl
worker/: Cargo.toml
worker/sql/: dequeue.sql  finish.sql
worker/src/: db.rs  error.rs  lib.rs  main.rs
