[workspace]
members = [
    "crates/app-monolith",
    "crates/common",
    "crates/docs",
    "crates/http-server",
    "crates/scheduler",
    "crates/task-api",
    "crates/queue"
]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
docs = { path = "./crates/docs" }
common = { path = "./crates/common" }
http-server = { path = "./crates/http-server" }
scheduler = { path = "./crates/scheduler" }
task-api = { path = "./crates/task-api" }
queue = { path = "./crates/queue" }

aide = { version = "^0", features = ["axum", "redoc", "macros", "axum-headers"] }
anyhow = "^1"
axum = { version = "^0", features = ["headers"] }
axum-macros = "^0"
axum-extra = "^0"
axum-jsonschema = { version = "^0", features = ["aide"] }
chrono = { version = "^0", features = ["serde"] }
futures = "^0"
hyper = { version = "^0", features = ["full"] }
schemars = { version = "^0", features = ["uuid1", "chrono"] }
serde = { version = "^1",  features = ["derive", "rc"] }
serde_json = { version = "^1", features = ["preserve_order"] }
strum = { version = "^0", features = ["derive"] }
sqlx = { version = "^0", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "^1"
tokio = { version = "^1", features = ["full", "tracing"] }
tower = "^0"
tower-http = { version = "^0", features = ["trace"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
ulid = { version = "^1", features = ["uuid"] }
uuid = { version = "^1", features = ["serde", "v4"] }
