[workspace]
members = ["worker"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
anyhow = "^1"
futures = "^0"
rand = "^0"
sqlx = { version = "^0", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "^1"
tokio = { version = "^1", features = ["full", "tracing"] }
tokio-util = "^0"
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
