[package]
name = "app-monolith"
version = "0.1.0"
edition = "2021"

[dependencies]
aide.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-jsonschema.workspace = true
axum-macros.workspace = true
futures.workspace = true
hyper.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
