[package]
name = "app-monolith"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
docs.workspace = true
http-server.workspace = true
scheduler.workspace = true
task-api.workspace = true
worker.workspace = true

anyhow.workspace = true
axum.workspace = true
futures.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
