[package]
name = "monolith-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
