[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.5.16", features = ["headers"] }
hyper = { version = "^0.14.20", features = ["full"] }
serde = { version = "^1.0.145",  features = ["derive"] }
tokio = { version = "^1.21.2", features = ["full", "tracing"] }
