[package]
name = "task-api"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
docs.workspace = true

aide.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
strum.workspace = true
sqlx.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
