[package]
name = "workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks" }
time = "^0.3.9"
tokio = { version = "^1.21.2", features = ["full", "tracing"] }
tracing = "0.1.36"
