[package]
name = "workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.5.16", features = ["headers"] }
anyhow = "^1.0.65"
lazy_static = "^1.4.0"
serde = { version = "^1.0.145",  features = ["derive"] }
tasks = { path = "../tasks" }
time = { version = "^0.3.9", features = ["serde", "serde-well-known"] }
tokio = { version = "^1.21.2", features = ["full", "tracing"] }
tracing = "0.1.36"
